ajuste footer que não estava funcionando na pag receitas

--- a/receitas.html
+++ b/receitas.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 
   </head>
-
+  <div class="content">
   <body>
     <!-- INICIO HEADER -->
     <header>
@@ -126,6 +126,7 @@
       </div><!-- /modal-overlay -->
     </main>
     <!-- FIM MAIN -->
+  </div><!-- Fim content -->
 
     <!-- INICIO FOOTER -->
     <footer>
