--- a/sobre.html
+++ b/sobre.html
@@ -18,6 +18,8 @@
   </head>
 
   <body>
+  <div class="content">
+
     <!-- INICIO HEADER -->
     <header>
       <div class="container">
@@ -72,6 +74,7 @@
       <!-- FIM SOBRE NOS -->
     </main>
     <!-- FIM MAIN -->
+  </div> <!--     <div class="content"> -->
 
     <!-- INICIO FOOTER -->
     <footer>
